# a-chaos-64

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: build-macos.yml  build-windows.yml  deploy-macos.yml  deploy-windows.yml
extras/: a-chaos-lib_overview.maxpat
help/: a-baker.maxhelp  a-clifford.maxhelp  a-collatz.maxhelp  a-duffing.maxhelp  a-fibonacci.maxhelp  a-ginger.maxhelp  a-henon-heilles.maxhelp  a-henon-phase.maxhelp  a-henon.maxhelp  a-henonf.maxhelp  a-ikeda.maxhelp  a-jong.maxhelp  a-logistic.maxhelp  a-logistic1.maxhelp  a-lorenz.e.maxhelp  a-lorenz.maxhelp  a-lyapunov.maxhelp  a-navier-stokes.e.maxhelp  a-navier-stokes.maxhelp  a-rossler.maxhelp  a-stein.maxhelp  a-stein1.maxhelp  a-torus.maxhelp  a-verhulst.maxhelp  combdraw.maxpat  listenqt.maxpat  listenqt2.maxpat  minmax.f.maxpat
scripts/: appveyor-build.bat  build.sh  install-package-7-osx.sh  install-package-8-osx.sh  install-package-9-osx.sh  make-package-osx.sh
src/: a-baker.c  a-clifford.c  a-collatz.c  a-duffing.c  a-fibonacci.c  a-ginger.c  a-henon-heilles.c  a-henon-phase.c  a-henon.c  a-henonf.c  a-ikeda.c  a-jong.c  a-logistic.c  a-logistic1.c  a-lorenz.c  a-lorenz.e.c  a-lyapunov.c  a-navier-stokes.c  a-navier-stokes.e.c  a-rossler.c  a-stein.c  a-stein1.c  a-torus.c  a-verhulst.c
src/extra/: Files.h  compatibility.h
